--- a/snaw-frontend/package.json
+++ b/snaw-frontend/package.json
@@ -50,9 +50,12 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.12.0",
     "react-app-polyfill": "^1.0.4",
+    "react-audio-player": "^0.11.1",
     "react-dev-utils": "^9.1.0",
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.0",
+    "react-h5-audio-player": "^2.4.2",
+    "react-hot-loader": "^4.12.19",
     "react-promise-tracker": "^2.0.5",
     "react-router-dom": "^5.1.2",
     "recharts": "^2.0.0-beta.1",
