--- a/snaw-frontend/package.json
+++ b/snaw-frontend/package.json
@@ -20,6 +20,7 @@
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chalk": "^3.0.0",
     "css-loader": "2.1.1",
+    "csv-writer": "^1.6.0",
     "dotenv": "6.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.1.0",
