--- a/snaw-frontend/package.json
+++ b/snaw-frontend/package.json
@@ -59,6 +59,7 @@
     "react-hot-loader": "^4.12.19",
     "react-promise-tracker": "^2.0.5",
     "react-router-dom": "^5.1.2",
+    "react-toastify": "^5.5.0",
     "recharts": "^2.0.0-beta.1",
     "resolve": "1.12.0",
     "resolve-url-loader": "3.1.0",
